# coconut-frp

./: coconut.cabal  stack.yaml
src/Data/: Assortment.hs
src/Data/Assortment/: Class.hs
src/FRP/: Coconut.hs
src/FRP/Coconut/: Core.hs
