name:           coconut
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/quickdudley/coconut#readme>
homepage:       https://github.com/quickdudley/coconut#readme
bug-reports:    https://github.com/quickdudley/coconut/issues
author:         Jeremy List
maintainer:     quick.dudley@gmail.com
copyright:      BSD3
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/quickdudley/coconut

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      parallel,
      rank2classes
  exposed-modules:
      FRP.Coconut,
      FRP.Coconut.Core
  other-modules:
      Paths_coconut
  default-language: Haskell2010

test-suite coconut-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  other-modules:
      Paths_coconut
  default-language: Haskell2010
